# volt

./: .gitignore  Cargo.toml  LICENSE.md  README.md  sample.txt  volt.toml
crates/volt/: Cargo.toml  cli.rs  colors.rs  config.rs  default.toml  hash.rs  helpers.rs
crates/volt-server/: Cargo.toml  server.rs
crates/volt/config/: config.rs  default.toml
