[workspace]
resolver = "2"
members = [
   "crates/volt",
   "crates/volt-server"
]

[workspace.package]
license = "MIT"
edition = "2021"
version = "0.0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.dependencies]
toml = "0.8.19"
anyhow = "1.0.95"

uuid = { version = "1.12.1", features = ["v4"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
