[workspace]
resolver = "2"
members = ["crates/volt", "crates/volt-server"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.dependencies]
toml = "0.9.0"
anyhow = "1.0.98"

uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
