[package]
name = "volt-server"
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "volt-server"
path = "server.rs"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
tokio-util = "0.7.13"

toml.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
