[package]
name = "volt-server"
description = "Server for crates.io/crate/volt-cli"

license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "volt-server"
path = "server.rs"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

tokio-util = { version = "0.7.13", features = ["io"] }

toml.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
