[package]
name = "volt"
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "volt"
path = "cli.rs"

[dependencies]
tar = "0.4.43"
colored = "3.0.0"
indicatif = "0.17.9"

zstd = { version = "0.13.2", features = ["zstdmt"] }
clap = { version = "4.5.27", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }

toml.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
