[package]
name = "volt-cli"
description = "⚡ Simple and lightning fast caching for... anything"
readme = "../../README.md"

license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "volt"
path = "cli.rs"

[dependencies]
tar = "0.4.44"
home = "0.5.11"
whoami = "1.6.0"
ahash = "0.8.12"
rayon = "1.10.0"
walkdir = "2.5.0"
inquire = "0.7.5"
colored = "3.0.0"
indicatif = "0.18.0"

zstd = { version = "0.13.3", features = ["zstdmt"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }

toml.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
merkle_hash = "3.8.0"
